--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
          </div>
       </div>
    </header>
+
+   <section class="hero">
+      <div class="container">
+         <div class="wrapper">
+            <div class="hero-texts">
+               <h1 class="hero-title">Дизайн и верстка</h1>
+               <p class="hero-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem
+                  Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+               <a class="primary-btn btn" href="#">НАПИСАТЬ МНЕ</a>
+            </div>
+         </div>
+      </div>
+   </section>
 </body>
 
 </html>
