stat section complate

--- a/index.html
+++ b/index.html
@@ -57,6 +57,67 @@
          </div>
       </div>
    </section>
+
+   <section class="about">
+      <div class="container">
+         <h2 class="section-title">Обо мне</h2>
+         <p class="about-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
+            является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+      </div>
+   </section>
+
+   <section class="stat">
+      <div class="container">
+         <dl class="desc-list">
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+            <div class="desc-wrapper">
+               <dd class="desc-date">40+</dd>
+               <dt class="desc-title">проектов</dt>
+            </div>
+         </dl>
+      </div>
+   </section>
+
+   <div class="skills">
+      <div class="container">
+         <div class="wrapper">
+            <div class="skills-content">
+               <h2 class="section-title skills-title">Мои навыки</h2>
+               <p class="skills-type">Adobe Photoshop</p>
+               <div class="skills-level"></div>
+
+               <p class="skills-type">Adobe Photoshop</p>
+               <div class="skills-level"></div>
+
+               <p class="skills-type">Adobe Photoshop</p>
+               <div class="skills-level"></div>
+            </div>
+         </div>
+      </div>
+   </div>
 </body>
 
 </html>
