skills section complate

--- a/index.html
+++ b/index.html
@@ -93,17 +93,13 @@
                <dd class="desc-date">40+</dd>
                <dt class="desc-title">проектов</dt>
             </div>
-            <div class="desc-wrapper">
-               <dd class="desc-date">40+</dd>
-               <dt class="desc-title">проектов</dt>
-            </div>
          </dl>
       </div>
    </section>
 
-   <div class="skills">
+   <section class="skills">
       <div class="container">
-         <div class="wrapper">
+         <div class="wrapper skills-wrapper">
             <div class="skills-content">
                <h2 class="section-title skills-title">Мои навыки</h2>
                <p class="skills-type">Adobe Photoshop</p>
@@ -115,9 +111,19 @@
                <p class="skills-type">Adobe Photoshop</p>
                <div class="skills-level"></div>
             </div>
+            <img src="/img/avatar.jpg" alt="avatar" width="555" height="450">
          </div>
       </div>
-   </div>
+   </section>
+
+   <section class="how">
+      <div class="container">
+         <h2 class="section-title">Как я работаю</h2>
+         <p class="how-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
+            является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+         <img class="video" src="/img/code.png" alt="video" width="1110" height="600">
+      </div>
+   </section>
 </body>
 
 </html>
