gallery section complate

--- a/index.html
+++ b/index.html
@@ -130,6 +130,33 @@
          </svg>
       </div>
    </section>
+
+   <div class="gallery">
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/work.jpg" alt="work" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/work.jpg" alt="work" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/work.jpg" alt="work" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/work.jpg" alt="work" width="480" height="480">
+      </div>
+      <div class="gallery-wrapper">
+         <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
+      </div>
+   </div>
 </body>
 
 </html>
