contact section complate

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
    </section>
 
-   <div class="gallery">
+   <section class="gallery">
       <div class="gallery-wrapper">
          <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
       </div>
@@ -156,7 +156,44 @@
       <div class="gallery-wrapper">
          <img class="gallery-image" src="/img/notes.jpg" alt="notes" width="480" height="480">
       </div>
-   </div>
+   </section>
+
+   <section class="partners">
+      <div class="container">
+         <div class="wrapper partners-wrapper">
+            <a class="partner-link" href="microsoft.com">
+               <img class="partners-logo" src="/img/microsoft.png" alt="microsoft" width="255" height="120">
+            </a>
+            <a class="partner-link" href="microsoft.com">
+               <img class="partners-logo" src="/img/microsoft.png" alt="microsoft" width="255" height="120">
+            </a>
+            <a class="partner-link" href="microsoft.com">
+               <img class="partners-logo" src="/img/microsoft.png" alt="microsoft" width="255" height="120">
+            </a>
+            <a class="partner-link" href="microsoft.com">
+               <img class="partners-logo" src="/img/microsoft.png" alt="microsoft" width="255" height="120">
+            </a>
+         </div>
+      </div>
+   </section>
+
+   <section class="contact">
+      <div class="container">
+         <h2 class="section-title">Хотите веб-сайт?</h2>
+         <p class="contact-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum
+            является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+         <form class="contact-form" method="get">
+            <input type="text" name="name" placeholder="Ваше имя" required>
+            <input type="email" name="email" placeholder="Ваш e-mail" required>
+            <textarea id="story" name="story" rows="10" cols="60" placeholder="Сообщение" required></textarea>
+            <div class="btn-wrapper">
+               <input class="contact-btn primary-btn btn" type="submit" value="ОТПРАВИТЬ"></input>
+            </div>
+         </form>
+
+
+      </div>
+   </section>
 </body>
 
 </html>
